Set canvas to remaining screen size

--- a/lib/gallery_web/components/layouts/app.html.heex
+++ b/lib/gallery_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
 <header class="px-4 sm:px-6 lg:px-8">
-  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
+  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm h-[60px]">
     <div class="flex items-center gap-4">
       <a href="/">
         <img src={~p"/images/logo.svg"} width="36" />
