--- a/lib/gallery_web/live/gallery_live.html.heex
+++ b/lib/gallery_web/live/gallery_live.html.heex
@@ -1,4 +1,4 @@
-<div class="relative">
+<div class="relative flex flex-col h-[calc(100vh-60px)]">
   <div id="stats-canvas"></div>
-  <div id="gallery-canvas"></div>
+  <div id="gallery-canvas" class="grow"></div>
 </div>
